--- a/.github/workflows/model_evaluation.yaml
+++ b/.github/workflows/model_evaluation.yaml
@@ -2,6 +2,7 @@ name: model-training
 on: [push]
 jobs:
   run:
+    permissions: write-all
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
